fixed textarea refresh behavior + scrollbar on svg + stop loading and erase svg view on refresh

--- a/css/arborator-draft.css
+++ b/css/arborator-draft.css
@@ -112,3 +112,7 @@
 	-webkit-transition: all 0.2s ease-in-out;
 	opacity: .9;
   }
+
+	.svgbox {
+		overflow-x: auto;
+	}
